fix alignement and wrap logic for project tools

--- a/Styles/home-style.css
+++ b/Styles/home-style.css
@@ -274,6 +274,9 @@ body
 {
   display: flex;
   flex-direction: row;
+  align-items: start;
+  flex-wrap:wrap;
+  width: 100%;
   gap: 5%;
 }
 
